<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5EC4B18"
    tools:context=".TemperatureActivity">

    <ImageView
        android:id="@+id/ivLength"
        android:layout_width="265dp"
        android:layout_height="213dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/temperatureicon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="326dp"
        android:layout_height="81dp"
        android:layout_marginTop="36dp"
        android:paddingLeft="20dp"
        android:text="@string/measure_temperature"
        android:textColor="#A10E03"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLength" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_value_temperature"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColorHint="#F0BA190D"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="258dp"
        android:layout_height="81dp"
        android:layout_marginTop="15dp"
        android:background="#FF5722"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/answer_temperature"
        android:textColor="#FCFFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValue" />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:text="@string/convert"
        app:backgroundTint="#BD2B20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult" />


</androidx.constraintlayout.widget.ConstraintLayout>