<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LengthActivity">

    <ImageView
        android:id="@+id/ivLength"
        android:layout_width="265dp"
        android:layout_height="213dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lengthicon" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="287dp"
        android:layout_height="76dp"
        android:layout_marginTop="36dp"
        android:paddingLeft="20dp"
        android:text="@string/measure_length"
        android:textColor="#EDA56609"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLength" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Enter value in miles"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColorHint="#C1CD800E"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="258dp"
        android:layout_height="81dp"
        android:layout_marginTop="15dp"
        android:background="#F7BD760E"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/answer_length"
        android:textColor="#FCFFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValue" />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:text="@string/convert"
        app:backgroundTint="#F8714503"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult" />
</androidx.constraintlayout.widget.ConstraintLayout>